--- a/wally.toml
+++ b/wally.toml
@@ -1,13 +1,13 @@
 [package]
-name = "nightcycle/package"
-description = "A package!"
-version = "4.0.0"
+name = "nightcycle/query"
+description = "attributes meet collection service"
+version = "0.1.1"
 authors = ["CJ Oyer <coyer@nightcycle.us>"]
 realm = "shared"
 registry = "https://github.com/upliftgames/wally-index"
 exclude = ["Packages", ".vscode"]
 
 [dependencies]
-coldfusion = "nightcycle/cold-fusion@1.0.0"
+coldfusion = "nightcycle/cold-fusion@1.0.1"
 signal = "quenty/signal@^2.0.0-canary"
 maid = "quenty/maid@^2.0.1-canary"
